--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <nav>
     <a href="index.html">About</a>
     <a href="post.html">Posts</a>
-    <a href="project.html">Projects</a>
+    <a href="projects.html">Projects</a>
     <a href="contact.html">Contact</a>
   </nav>
 
