added CV button

--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
 				I gain through reading. This site is a blend of learning, experimentation, and creative expression.
 			</p>
 		
-
-    
+			<div class="cv-button-wrapper">
+				<a href="myCV.pdf" target="_blank" class="cv-button">View My CV</a>
+			</div>
     
   </section>
 
