--- a/projects.html
+++ b/projects.html
@@ -106,50 +106,52 @@
 
       </ul>
 
+	  <p>Note: I'm pretty sure, the file will not run on linux. It is only working on windows as per my observation. Linux version coming soon :D</p>
+
       <div class="gallery">
-        <a href="chess screenshots/2.png" data-lightbox="chess" data-title="Chess Board View">
+        <a href="chess screenshots/2.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
             <img src="chess screenshots/2.png" alt="Chess Board">
         </a>
-        <a href="chess screenshots/1.png" data-lightbox="chess" data-title="Chess Board View">
+        <a href="chess screenshots/1.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
             <img src="chess screenshots/1.png" alt="Chess Board">
         </a>
-        <a href="chess screenshots/5.png" data-lightbox="chess" data-title="Chess Board View">
+        <a href="chess screenshots/5.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
             <img src="chess screenshots/5.png" alt="Chess Board">
         </a>
-        <a href="chess screenshots/6.png" data-lightbox="chess" data-title="Chess Board View">
+        <a href="chess screenshots/6.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
             <img src="chess screenshots/6.png" alt="Chess Board">
         </a>
-        <a href="chess screenshots/7.png" data-lightbox="chess" data-title="Chess Board View">
+        <a href="chess screenshots/7.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
             <img src="chess screenshots/7.png" alt="Chess Board">
         </a>
-        <a href="chess screenshots/8.png" data-lightbox="chess" data-title="Chess Board View">
+        <a href="chess screenshots/8.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
             <img src="chess screenshots/8.png" alt="Chess Board">
         </a>
-        <a href="chess screenshots/9.png" data-lightbox="chess" data-title="Chess Board View">
+        <a href="chess screenshots/9.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
             <img src="chess screenshots/9.png" alt="Chess Board">
         </a>
-        <a href="chess screenshots/10.png" data-lightbox="chess" data-title="Chess Board View">
+        <a href="chess screenshots/10.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
             <img src="chess screenshots/10.png" alt="Chess Board">
         </a>
-        <a href="chess screenshots/11.png" data-lightbox="chess" data-title="Chess Board View">
+        <a href="chess screenshots/11.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
             <img src="chess screenshots/11.png" alt="Chess Board">
         </a>
-        <a href="chess screenshots/12.png" data-lightbox="chess" data-title="Chess Board View">
+        <a href="chess screenshots/12.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
             <img src="chess screenshots/12.png" alt="GameOver!">
         </a>
-        <a href="chess screenshots/13.png" data-lightbox="chess" data-title="Chess Board View">
+        <a href="chess screenshots/13.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
             <img src="chess screenshots/13.png" alt="Promotion">
         </a>
-        <a href="chess screenshots/14.png" data-lightbox="chess" data-title="Chess Board View">
+        <a href="chess screenshots/14.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
             <img src="chess screenshots/14.png" alt="Promotion">
         </a>
-        <a href="chess screenshots/15.png" data-lightbox="chess" data-title="Chess Board View">
+        <a href="chess screenshots/15.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
             <img src="chess screenshots/15.png" alt="Game Code">
         </a>
-        <a href="chess screenshots/16.png" data-lightbox="chess" data-title="Chess Board View">
+        <a href="chess screenshots/16.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
             <img src="chess screenshots/16.png" alt="Game Code">
         </a>
-        <a href="chess screenshots/17.png" data-lightbox="chess" data-title="Chess Board View">
+        <a href="chess screenshots/17.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
             <img src="chess screenshots/17.png" alt="Game Code">
         </a>
       </div>
