Added Python Project, and organized images

--- a/post.html
+++ b/post.html
@@ -29,7 +29,7 @@
 	  <button onclick="togglePost('post1', this)">Read more</button>
       <div id="post1" class="full-post" style="display: none;">
         <p>
-		<img src="lawspower.png" class="float-img">
+		<img src="photos/lawspower.png" class="float-img">
 			
           Although now mainstream, the book, <em>The 48 Laws of Power</em>, still stands as a strong pillar
           for he who is on a journey to improve himself. The book is very well written and really pulls you in.
