--- a/projects.html
+++ b/projects.html
@@ -81,12 +81,22 @@
         <p>2-player chess game with GUI</p>
       </div>
 
-      <!-- Project Box 2 (placeholder) -->
+	<!-- Project Box 2: Tic Tac Toe -->
+	<div class="project-box" onclick="toggleDetails('tictactoe')">
+	  <h3>Tic Tac Toe Game</h3>
+	  <p>Python GUI game (Tkinter)</p>
+	</div>
+
+
+      <!-- Project Box 3 (placeholder) -->
       <div class="project-box" onclick="toggleDetails('comingsoon')">
         <h3>Upcoming Project</h3>
         <p>Details coming soon...</p>
       </div>
     </div>
+
+
+
 
     <!-- Expanded details for Project 1 -->
     <div id="chess" class="project-details">
@@ -109,55 +119,82 @@
 	  <p>Note: I'm pretty sure, the file will not run on linux. It is only working on windows as per my observation. Linux version coming soon :D</p>
 
       <div class="gallery">
-        <a href="chess screenshots/2.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
-            <img src="chess screenshots/2.png" alt="Chess Board">
+        <a href="photos/chess screenshots/2.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
+            <img src="photos/chess screenshots/2.png" alt="Chess Board">
         </a>
-        <a href="chess screenshots/1.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
-            <img src="chess screenshots/1.png" alt="Chess Board">
+        <a href="photos/chess screenshots/1.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
+            <img src="photos/chess screenshots/1.png" alt="Chess Board">
         </a>
-        <a href="chess screenshots/5.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
-            <img src="chess screenshots/5.png" alt="Chess Board">
+        <a href="photos/chess screenshots/5.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
+            <img src="photos/chess screenshots/5.png" alt="Chess Board">
         </a>
-        <a href="chess screenshots/6.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
-            <img src="chess screenshots/6.png" alt="Chess Board">
+        <a href="photos/chess screenshots/6.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
+            <img src="photos/chess screenshots/6.png" alt="Chess Board">
         </a>
-        <a href="chess screenshots/7.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
-            <img src="chess screenshots/7.png" alt="Chess Board">
+        <a href="photos/chess screenshots/7.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
+            <img src="photos/chess screenshots/7.png" alt="Chess Board">
         </a>
-        <a href="chess screenshots/8.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
-            <img src="chess screenshots/8.png" alt="Chess Board">
+        <a href="photos/chess screenshots/8.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
+            <img src="photos/chess screenshots/8.png" alt="Chess Board">
         </a>
-        <a href="chess screenshots/9.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
-            <img src="chess screenshots/9.png" alt="Chess Board">
+        <a href="photos/chess screenshots/9.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
+            <img src="photos/chess screenshots/9.png" alt="Chess Board">
         </a>
-        <a href="chess screenshots/10.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
-            <img src="chess screenshots/10.png" alt="Chess Board">
+        <a href="photos/chess screenshots/10.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
+            <img src="photos/chess screenshots/10.png" alt="Chess Board">
         </a>
-        <a href="chess screenshots/11.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
-            <img src="chess screenshots/11.png" alt="Chess Board">
+        <a href="photos/chess screenshots/11.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
+            <img src="photos/chess screenshots/11.png" alt="Chess Board">
         </a>
-        <a href="chess screenshots/12.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
-            <img src="chess screenshots/12.png" alt="GameOver!">
+        <a href="photos/chess screenshots/12.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
+            <img src="photos/chess screenshots/12.png" alt="GameOver!">
         </a>
-        <a href="chess screenshots/13.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
-            <img src="chess screenshots/13.png" alt="Promotion">
+        <a href="photos/chess screenshots/13.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
+            <img src="photos/chess screenshots/13.png" alt="Promotion">
         </a>
-        <a href="chess screenshots/14.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
-            <img src="chess screenshots/14.png" alt="Promotion">
+        <a href="photos/chess screenshots/14.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
+            <img src="photos/chess screenshots/14.png" alt="Promotion">
         </a>
-        <a href="chess screenshots/15.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
-            <img src="chess screenshots/15.png" alt="Game Code">
+        <a href="photos/chess screenshots/15.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
+            <img src="photos/chess screenshots/15.png" alt="Game Code">
         </a>
-        <a href="chess screenshots/16.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
-            <img src="chess screenshots/16.png" alt="Game Code">
+        <a href="photos/chess screenshots/16.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
+            <img src="photos/chess screenshots/16.png" alt="Game Code">
         </a>
-        <a href="chess screenshots/17.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
-            <img src="chess screenshots/17.png" alt="Game Code">
+        <a href="photos/chess screenshots/17.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
+            <img src="photos/chess screenshots/17.png" alt="Game Code">
         </a>
       </div>
     
-      <a class="launch-button" href="funkychess.jar" download>Download File</a>
+      <a class="launch-button" href="HasanChess/funkychess.jar" download>Download File</a>
     </div>
+
+	<div id="tictactoe" class="project-details">
+	  <h3>Tic Tac Toe – Python Project</h3>
+	  <p>This is a simple GUI-based Tic Tac Toe game created with Python and Tkinter. Players can choose between a 3×3 or 4×4 grid, and the game allows two players to play locally.</p>
+  
+	<div class="gallery">
+        <a href="photos/tictactoe-screenshots/1.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
+            <img src="photos/tictactoe-screenshots/1.png" alt="Start Screen">
+        </a>
+        <a href="photos/tictactoe-screenshots/2.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
+            <img src="photos/tictactoe-screenshots/2.png" alt="3x3">
+        </a>
+        <a href="photos/tictactoe-screenshots/3.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
+            <img src="photos/tictactoe-screenshots/3.png" alt="Gameover">
+        </a>
+        <a href="photos/tictactoe-screenshots/4.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
+            <img src="photos/tictactoe-screenshots/4.png" alt="4x4">
+        </a>
+        <a href="photos/chess screenshots/17.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
+            <img src="photos/tictactoe-screenshots/5.png" alt="Game Over">
+        </a>
+      </div>
+
+
+	  <a class="launch-button" href="PythonTicTacToe/tic.zip" download>Download Python File</a>
+	</div>
+
 
     <!-- Details for placeholder project -->
     <div id="comingsoon" class="project-details">
