Add description for TicTacToe game

--- a/projects.html
+++ b/projects.html
@@ -171,7 +171,18 @@
 
 	<div id="tictactoe" class="project-details">
 	  <h3>Tic Tac Toe – Python Project</h3>
-	  <p>This is a simple GUI-based Tic Tac Toe game created with Python and Tkinter. Players can choose between a 3×3 or 4×4 grid, and the game allows two players to play locally.</p>
+	  <p>This is a simple GUI-based Tic Tac Toe game created with Python and Tkinter. Players can choose between a 3×3 or 4×4 grid, and the game allows two players to play locally.
+		Very simple setup. I was planning on making an arcade type GUI where players can choose from different games, just as atari, tetris, pong, but I didnt have time for all that.
+		Possible improvements:
+	  </p>
+	  
+	  <ul>
+		<li>Add a custom size for the board</li>
+		<li>Have custom win conditions that players can define</li>
+		<li>Add a bot, for multiplayer purpose.</li>
+	  </ul>
+	  
+	  
   
 	<div class="gallery">
         <a href="photos/tictactoe-screenshots/1.png" target="_blank" data-lightbox="chess" data-title="Chess Board View">
