--- a/projects.html
+++ b/projects.html
@@ -60,17 +60,18 @@
 </head>
 <body>
 
-  <header>
+<header class="hero-header">
+  <div class="hero-content">
     <h1>Hasan Aamir Jilani</h1>
     <p>Software Engineering Student | Frontend Enthusiast | Lifelong Learner</p>
-  </header>
-
-  <nav>
-    <a href="index.html">About</a>
-    <a href="post.html">Posts</a>
-    <a href="projects.html">Projects</a>
-    <a href="contact.html">Contact</a>
-  </nav>
+    <nav>
+      <a href="index.html">About</a>
+      <a href="post.html">Posts</a>
+      <a href="projects.html">Projects</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </div>
+</header>
 
   <section id="projects">
     <h2>My Projects</h2>
