--- a/index.html
+++ b/index.html
@@ -34,20 +34,15 @@
 				
 				<img src="photos/just_me.png" alt="My Photo" class=float-img>
 						
-				Hi, my name is Hasan. I'm a first-year Software Engineering student with a strong curiosity for how things work —
-				whether it's hardware, code, or systems. Ever since I was a kid, I've loved taking gadgets apart 
+				Hi, my name is Hasan. I'm a first-year Software Engineering student with a strong curiosity for how things work.
+				Whether it's hardware, code, or systems. Ever since I was a kid, I've loved taking gadgets apart 
 				(sometimes putting them back together), and that passion naturally led me to software.
 			</p>
 		
 			<p>
-				Outside of my studies, I enjoy reading thought-provoking books — one of my favorites is The 48 Laws of Power by Robert Greene. 
-				I’m especially interested in how strategy, psychology, and human behavior intersect with technology. 
-				I also occasionally journal or write small reflections on what I learn, both in tech and life.
-			</p>
-			<p>
 				In my free time, you might find me playing around with personal coding projects, testing new 
 				apps and open-source tools, or watching documentaries on innovation, warfare, or history. 
-				I enjoy structured chaos — I like to experiment, fail, learn, and repeat.
+				I enjoy structured chaos, I like to experiment, fail, learn, and repeat.
 			</p>
 			<p>
 				I’m naturally curious, self-driven, and always eager to learn from different people and perspectives. 
@@ -55,9 +50,14 @@
 				I love the process of building and improving.
 			</p>
 			<p>
+				Outside of my studies, I enjoy reading thought-provoking books, one of my favorites is The 48 Laws of Power by Robert Greene. 
+				I’m especially interested in how strategy, psychology, and human behavior intersect with technology. 
+				I also occasionally journal or write small reflections on what I learn, both in tech and life.
+			</p>
+			<p>
 				The purpose of this portfolio site is to express my thoughts, share my personal and academic projects, and 
 				document my journey as a software engineering student. In addition to showcasing my work, I will also be using 
-				this space to publish book reviews from time to time — offering reflections on the ideas, strategies, and insights 
+				this space to publish book reviews from time to time, offering reflections on the ideas, strategies, and insights 
 				I gain through reading. This site is a blend of learning, experimentation, and creative expression.
 			</p>
 		
