minor changes to project.html

--- a/projects.html
+++ b/projects.html
@@ -76,20 +76,18 @@
   <section id="projects">
     <h2>My Projects</h2>
     <div class="projects-grid">
-      <!-- Project Box 1 -->
       <div class="project-box" onclick="toggleDetails('chess')">
         <h3>Java Chess Game</h3>
         <p>2-player chess game with GUI</p>
       </div>
 
-	<!-- Project Box 2: Tic Tac Toe -->
 	<div class="project-box" onclick="toggleDetails('tictactoe')">
 	  <h3>Tic Tac Toe Game</h3>
 	  <p>Python GUI game (Tkinter)</p>
 	</div>
 
 
-      <!-- Project Box 3 (placeholder) -->
+      <!-- Placeholder -->
       <div class="project-box" onclick="toggleDetails('comingsoon')">
         <h3>Upcoming Project</h3>
         <p>Details coming soon...</p>
@@ -99,7 +97,6 @@
 
 
 
-    <!-- Expanded details for Project 1 -->
     <div id="chess" class="project-details">
       <h3>Java Chess Game – Overview</h3>
       <p>This project is a fully functional two-player chess game written in Java. The sprites for the chess 
