--- a/projects.html
+++ b/projects.html
@@ -11,52 +11,6 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css" rel="stylesheet">
 
   
-  <style>
-    .projects-grid {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 2em;
-      justify-content: center;
-      margin-top: 2em;
-    }
-
-    .project-box {
-      background-color: #e6f2ff;
-      border: 1px solid #99c2ff;
-      border-radius: 8px;
-      padding: 1em;
-      width: 280px;
-      cursor: pointer;
-      transition: transform 0.2s;
-    }
-
-    .project-box:hover {
-      transform: scale(1.03);
-    }
-
-    .project-details {
-      display: none;
-      margin-top: 1em;
-      padding: 1em;
-      background-color: #f9f9f9;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-    }
-
-    .launch-button {
-      display: inline-block;
-      margin-top: 1em;
-      padding: 0.5em 1.2em;
-      background-color: #005599;
-      color: white;
-      text-decoration: none;
-      border-radius: 6px;
-    }
-
-    .launch-button:hover {
-      background-color: #003f80;
-    }
-  </style>
 </head>
 <body>
 
@@ -205,7 +159,7 @@
 	</div>
 
 
-    <!-- Details for placeholder project -->
+    <!-- Details for placeholder-->
     <div id="comingsoon" class="project-details">
       <h3>Stay Tuned</h3>
       <p>Another cool project is on its way. Check back soon!</p>
