--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
 <header class="hero-header">
   <div class="hero-content">
     <h1>Hasan Aamir Jilani</h1>
-    <p>Software Engineering Student | Frontend Enthusiast | Lifelong Learner</p>
+    <p class="caption">Lifelong Learner</p>
     <nav>
       <a href="index.html">About</a>
       <a href="post.html">Posts</a>
